wip: migrate to Java 17 and Spring Boot 3