@@ -1,14 +1,13 @@
 package com.trynoice.api.identity.entities;
 
+import jakarta.persistence.EntityManager;
 import lombok.val;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.persistence.EntityManager;
 import java.time.OffsetDateTime;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.trynoice.api.testing.AuthTestUtils.createAuthUser;
@@ -33,11 +32,11 @@ public class AuthUserRepositoryTest {
                 user.setDeactivatedAt(OffsetDateTime.now().minusHours(i));
                 return entityManager.merge(user);
             })
-            .collect(Collectors.toUnmodifiableList());
+            .toList();
 
         val activeUsers = IntStream.range(0, 5)
             .mapToObj(i -> createAuthUser(entityManager))
-            .collect(Collectors.toList());
+            .toList();
 
         val expiredBefore = OffsetDateTime.now().minusHours(2);
         val ids = authUserRepository.findAllIdsDeactivatedBefore(expiredBefore);
